kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-nginx
  namespace: vote
  annotations:
    sidecar.istio.io/proxyCPU: "500m"
    sidecar.istio.io/proxyMemory: "256Mi"
spec:
  replicas: 1  # 필요한 복제본 수 설정
  selector:
    matchLabels:
      app: vote-nginx
  template:
    metadata:
      labels:
        app: vote-nginx
    spec:
      containers:
      - name: vote-nginx
        image: hansol-container-registry.kr.ncr.ntruss.com/nginx-vote:1.0  # NCP 프라이빗 레지스트리에서 이미지를 가져옴
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
      - name: ncloud-registry-secret  # NCP 프라이빗 레지스트리 인증 정보 Secret
