kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-nginx
  namespace: vote
spec:
  selector:
    app: vote-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # 외부에서 접근할 수 있도록 LoadBalancer 설정
